--- a/index.html
+++ b/index.html
@@ -164,9 +164,9 @@
     </div>
     <div class="row justify-content-center">
         <div class="col-md-5 col-sm-6 mt-3" style="font-size: 24pt" style="background:red padding" >
-            <a href="https://twitter.com/mdbil4l" target="_blank"><i class="sm_handles fab fa-twitter"></i></a>
-            <a href="mailto:magicreal100@gmail.com"><i class=" sm_handles far fa-lg fa-envelope-open"></i></a>
-            <a href="https://www.linkedin.com/in/mdb571/"><i class=" sm_handles fab fa-lg fa-linkedin-in"></i></a>
+            <a href="https://github.com/mdb571" target="_blank"><i class="sm_handles fab fa-twitter"></i></a>
+            <a href="mailto:doitsee160@gmail.com"><i class=" sm_handles far fa-lg fa-envelope-open"></i></a>
+            <a href="https://github.com/mdb571"><i class=" sm_handles fab fa-lg fa-linkedin-in"></i></a>
             <a href="https://github.com/mdb571" target="_blank"><i class="sm_handles fab fa-github"></i></a>
              <a href="https://github.com/mdb571" target="_blank"><i class="sm_handles fab fa-facebook"></i></a>
         </div>
