--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                     <p align="center"></p>
                 </div>
                 <div class="col-md-5 col-sm-8">
-                    <a href="https://www.youtube.com/watch?v=pIDoHr5gBqw&feature=emb_title"><button class="btn btn-outline-success">See the  Video</button></a>
+                    <a href="https://www.youtube.com/watch?v=pIDoHr5gBqw&feature=emb_title"><button class="btn btn-outline-success">See working prototype Video</button></a>
                 </div>
 
             </div>
