--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <div class="col-md-5 col-sm-6 left-box">
             <div class="row justify-content-center mt-5">
                 <div class="col-md-12 col-sm-12 mt-4 mb-4">
-                    <h2 align="center" style="color: whitesmoke">Our Project</h2>
+                    <h2 align="center" style="color: whitesmoke">Our Hardware Project</h2>
                 </div>
                 <div class="col-md-12 col-md-12">
                     <hr style="margin:10px auto; width:60px; border: 2px solid #5ac88b; background: #5ac88b">
@@ -142,7 +142,7 @@
                     <p align="center"></p>
                 </div>
                 <div class="col-md-5 col-sm-8">
-                    <a href="https://www.youtube.com/watch?v=pIDoHr5gBqw&feature=emb_title"><button class="btn btn-outline-success">See working prototype Video</button></a>
+                    <a href="https://www.youtube.com/watch?v=pIDoHr5gBqw&feature=emb_title"><button class="btn btn-outline-success">Check working prototype Video</button></a>
                 </div>
 
             </div>
