--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   &nbsp;&nbsp;<li><h3 style="color:whitesmoke">&#9201;&nbsp;Place the device on the finish line of your track.</h3></li>
   &nbsp;&nbsp;<li><h3 style="color:whitesmoke">&#9201;&nbsp;Start the timer.</h3></li>
   &nbsp;&nbsp;<li><h3 style="color:whitesmoke">&#9201;&nbsp;The timer automatically stops when you cross the device ie the finish line.</h3></li>
-  &nbsp;&nbsp;<li><h3 style="color:whitesmoke">&#9201;&nbsp;Voilaa that's all you've to do get hacklympic timer ready and running.</h3></li>
+  &nbsp;&nbsp;<li> <marquee direction = "right" scrollamount="8" bgcolor="blue" behaviour="alternate" scrollamount="10"><h3 style="color:whitesmoke">&nbsp;Voilaa that's all you've to do get hacklympic timer &#9201; ready and running.</h3></marquee></li>
 </ul>
         </p>
         <br>
